@@ -7,12 +7,20 @@ Thermos -- Welcome
 {% block content %}
     <article>
         <header>
-            <h1>article header h1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
+            <h1>Welcome</h1>
+            <p>Following along with the Pluralsight Python Flask Cource</p>
         </header>
         <section>
-            <h2>article section h2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
+            <h2>Recently Added</h2>
+            {% if new_bookmarks %}
+                <ul>
+                    {% for bm in new_bookmarks %}
+                    <li>{{ bm.user }} added <a href="{{ bm.url }}">{{ bm.url }}</a></li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+            Nothing yet
+            {% endif %}
         </section>
         <section>
             <h2>article section h2</h2>
