@@ -1,3 +1,4 @@
 pbr>= 1.6
 
 Flask
+flask-wtf
